--- a/moneyapp/style/style.css
+++ b/moneyapp/style/style.css
@@ -7,9 +7,42 @@ body {
   overflow: hidden;
 }
 
+/*Header with flexbox (for navbar)*/
 header {
-  height: 5em;
+  color: white;
+  height: 4em;
   background: #70a300;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 5px 2%;
+}
+
+header .nav__links {
+  list-style: none;
+}
+
+header .nav__links li {
+  display: inline-block;
+  padding: 0px 20px;
+}
+
+header .nav__links li a {
+  font-size: 20px;
+  color: white;
+  text-decoration: none;
+  -webkit-transition: all 0.3 ease 0s;
+  transition: all 0.3 ease 0s;
+}
+
+header .nav__links li a:hover {
+  color: darkgreen;
 }
 
 section {
@@ -33,8 +66,8 @@ section {
 }
 
 .container .col .welcome {
-  margin: 3em;
-  padding: 4em;
+  margin: 2em;
+  padding: 3em;
   background: #f5f5f5;
   -webkit-box-shadow: 0px 4px 56px #c4c4c4;
           box-shadow: 0px 4px 56px #c4c4c4;
@@ -127,6 +160,12 @@ button {
   widows: 200px;
   height: 3em;
   width: 10em;
+  -webkit-transition: all 0.3 ease 0s;
+  transition: all 0.3 ease 0s;
+}
+
+button:hover {
+  background-color: lightgreen;
 }
 
 footer {
