--- a/moneyapp/style.scss
+++ b/moneyapp/style.scss
@@ -13,27 +13,28 @@ header {
   display:flex;
   justify-content: space-between;
   align-items: center;
-  padding:5px 2%;
+  nav {
+    margin: 0;
   .nav__links {
     list-style: none;
   li {
     display: inline-block;
-    padding: 0px 20px;
+    padding: 1rem 20px;
     a {
       font-size: 20px;
       color: white;
       text-decoration: none;
-      transition: all 0.3 ease 0s;
+      transition: all 0.5s ease 0s;
       &:hover {
-        color: darkgreen;
-        
+       color: yellow;
       }
     }
   }
   }
+  }
 }
 section {
-  height: 80%;
+  height: 85vh;
 }
 .container {
   height: 80%;
@@ -95,7 +96,6 @@ section {
 
 button {
   background: #639100;
-  border: 1px solid #000000;
   box-sizing: border-box;
   border-radius: 25px;
   font-family: Open Sans;
@@ -114,9 +114,10 @@ padding: 0.3em;
   widows: 200px;
   height: 3em;
   width: 10em;
-  transition: all 0.3 ease 0s;
+  transition: all 0.5s ease 0s;
   &:hover {
     background-color: lightgreen;
+    color: black;
   }
 }
 
