--- a/moneyapp/style/style.css
+++ b/moneyapp/style/style.css
@@ -53,7 +53,7 @@ section {
   height: 85vh;
 }
 
-.container {
+.start-container {
   height: 80%;
   display: -ms-grid;
   display: grid;
@@ -65,11 +65,11 @@ section {
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
-.container .col {
+.start-container .col {
   width: 100%;
 }
 
-.container .col .welcome {
+.start-container .col .welcome {
   margin: 2em;
   padding: 3em;
   background: #f5f5f5;
@@ -78,7 +78,7 @@ section {
   border-radius: 39px;
 }
 
-.container .col .welcome h1 {
+.start-container .col .welcome h1 {
   font-family: Open Sans;
   font-style: normal;
   font-weight: bold;
@@ -103,7 +103,7 @@ section {
   color: #2a8a84;
 }
 
-.container .col .description {
+.start-container .col .description {
   margin: 1em;
   padding: 1em;
   font-family: Open Sans;
@@ -122,7 +122,7 @@ section {
           justify-content: center;
 }
 
-.container .col p {
+.start-container .col p {
   text-align: center;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
@@ -132,14 +132,121 @@ section {
           flex: none;
 }
 
-.container img {
+.start-container img {
   display: block;
   margin: auto;
   width: 30vw;
 }
 
-button {
+.universal-container {
+  position: absolute;
+  left: 10%;
+  top: 10%;
+  bottom: 20%;
+  height: 80%;
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: (minmax(100px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  margin: 0 auto;
+  width: 80%;
+  background: #f5f5f5;
+  border: 1px solid #ababab;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0px 4px 56px #c4c4c4;
+          box-shadow: 0px 4px 56px #c4c4c4;
+  border-radius: 39px;
+}
+
+.income, .outcome, .finance {
+  display: -ms-grid;
+  display: grid;
+  text-align: center;
+}
+
+.income h1, .outcome h1, .finance h1 {
+  font-size: 36px;
+}
+
+.income h2, .outcome h2, .finance h2 {
+  font-size: 20px;
+}
+
+.submission-form {
+  text-align: center;
+  max-width: 200px;
+  margin: 1rem auto;
+  padding: 1rem;
+  border-radius: 5px;
+}
+
+.submission-form select, .submission-form select option {
+  display: block;
+  padding: 1rem;
+  border: 2px solid #2980B9;
+  font-size: 0.8em;
+  width: 100%;
+}
+
+.submission-form label {
+  display: block;
+  padding: 1rem;
+  font-size: 20px;
+}
+
+.submission-form input, .submission-form textarea {
+  display: block;
+  width: 100%;
+  border: 2px solid #2980B9;
+  font-size: 20px;
+  border-radius: 5px;
+}
+
+.submission-form .button {
+  padding: 1em;
+  margin: 0 auto;
+  margin-top: 2em;
+  display: block;
+  width: 10em;
+  border-radius: 30px;
+  border: 0px;
+  font-size: 1em;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: white;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.submission-form .button-income {
+  background: #7E9C3D;
+}
+
+.submission-form .button-outcome {
+  background: #D97F7F;
+}
+
+.last-finance {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: (minmax(30px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(30px, 1fr));
+  background: rgba(183, 206, 131, 0.7);
+}
+
+.get-started {
   background: #639100;
+  border: 0px white;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 25px;
@@ -167,7 +274,7 @@ button {
   transition: all 0.5s ease 0s;
 }
 
-button:hover {
+.get-started:hover {
   background-color: lightgreen;
   color: black;
 }
