--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0 auto;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  height: 100%;
+  height: 100vh;
   width: 100vw;
 }
 
@@ -10,7 +10,7 @@ body {
 header {
   padding: 0.5em;
   color: white;
-  height: 5vh;
+  height: 5%;
   background: #70a300;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -49,14 +49,13 @@ header nav .nav__links li a:hover {
 }
 
 section {
-  height: 76vh;
+  height: 76%;
 }
 
 .start-container {
-  height: 80%;
+  height: 85%;
   display: -ms-grid;
   display: grid;
-  justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -138,25 +137,17 @@ section {
 }
 
 .universal-container {
-  position: relative;
   height: 100%;
   margin: 0 auto;
   margin-top: 2em;
   width: 90%;
   background: #f5f5f5;
-  border: 1px solid #ababab;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   -webkit-box-shadow: 0px 4px 56px #c4c4c4;
           box-shadow: 0px 4px 56px #c4c4c4;
   border-radius: 39px;
   display: -ms-grid;
-  display: grid;
-  justify-items: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -278,35 +269,18 @@ section {
   width: 100%;
 }
 
-.record {
-  border: 1px solid black;
-  border-radius: 5em;
-}
-
 .get-started {
   background: #639100;
-  border: 0px white;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   border-radius: 25px;
   font-family: Open Sans;
-  font-style: normal;
   font-weight: 600;
   font-size: 1.5em;
   line-height: 49px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   text-align: center;
-  padding: 0.3em;
   color: #ffffff;
   cursor: pointer;
   display: block;
   margin: 0 auto;
-  widows: 200px;
   height: 3em;
   width: 10em;
   -webkit-transition: all 0.5s ease 0s;
@@ -319,6 +293,8 @@ section {
 }
 
 .wallet-container {
+  height: 100vh;
+  /* or position:absolute; height:100%; */
   position: relative;
   height: 100%;
   margin: 0 auto;
@@ -369,20 +345,27 @@ section {
 }
 
 .wallet-container table {
+  margin: 0 auto;
   text-align: center;
   padding: 1em;
   font-size: 2.2vw;
-  width: 100%;
+  width: 90%;
+  -webkit-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+.wallet-container table tr {
+  -webkit-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .history {
   height: 70%;
-  overflow-y: scroll;
+  overflow: auto;
 }
 
 footer {
-  margin-top: 2em;
-  height: 5vh;
+  height: 5%;
   background: #9dbc5a;
 }
 
