--- a/_variables.scss
+++ b/_variables.scss
@@ -2,6 +2,7 @@
    height: 100%;
    margin: 0 auto;
    margin-top: 2em;
+   align-items: center;
     width: 90%;
     background: #f5f5f5;
     box-sizing: border-box;
@@ -22,8 +23,6 @@
    margin-top: 2em;
     width: 90%;
     background: #f5f5f5;
-    border: 1px solid #ababab;
-    box-sizing: border-box;
     box-shadow: 0px 4px 56px #c4c4c4;
     border-radius: 39px;
 }
