--- a/style.scss
+++ b/style.scss
@@ -2,14 +2,14 @@
 body {
   margin: 0 auto;
   box-sizing: border-box;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
 }
 /*Header with flexbox (for navbar)*/
 header {
   padding: 0.5em;
   color: white;
-  height: 5%;
+  height: 15%;
   background: #70a300;
   display: flex;
   justify-content: space-between;
@@ -36,15 +36,17 @@ header {
   }
 }
 section {
-height: 76%;
+height: 80vh;
 
 }
 //Start Page container
 .start-container {
+   margin-top: 2em;
   height: 85%;
   display: grid;
   align-items: center;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+
   .col {
     width: 100%;
     .welcome {
@@ -232,17 +234,16 @@ width: 100%;
     padding: 1em;
     font-size: 2.2vw;
     width: 90%;
+    
   }
+  
 }
 .history {
 height: 70%;
 overflow: auto;
 }
+  
 
-footer {
-  height: 5%;
-  background: #9dbc5a;
-}
 
 @media (max-width: 750px) {
   .universal-container {
