--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,59 @@
+@-webkit-keyframes coins {
+  0% {
+    opacity: 0;
+    top: 0%;
+  }
+  10% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+  30% {
+    opacity: 1;
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  50% {
+    -webkit-transform: rotate(240deg);
+            transform: rotate(240deg);
+  }
+  70% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+  100% {
+    opacity: 1;
+    top: 95%;
+  }
+}
+
+@keyframes coins {
+  0% {
+    opacity: 0;
+    top: 0%;
+  }
+  10% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+  30% {
+    opacity: 1;
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  50% {
+    -webkit-transform: rotate(240deg);
+            transform: rotate(240deg);
+  }
+  70% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+  100% {
+    opacity: 1;
+    top: 95%;
+  }
+}
+
 body {
   margin: 0 auto;
   -webkit-box-sizing: border-box;
@@ -10,7 +66,7 @@ body {
 header {
   padding: 0.5em;
   color: white;
-  height: 15%;
+  height: 5vh;
   background: #70a300;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -268,7 +324,9 @@ table tr {
 }
 
 .get-started {
+  z-index: 1;
   background: #639100;
+  border: 0px;
   border-radius: 25px;
   font-family: Open Sans;
   font-weight: 600;
@@ -352,6 +410,11 @@ table tr {
   overflow: auto;
 }
 
+footer {
+  background: #9dbc5a;
+  height: 5vh;
+}
+
 @media (max-width: 750px) {
   .universal-container {
     -ms-grid-columns: 1fr 1fr;
@@ -367,7 +430,7 @@ table tr {
   .description {
     display: none !important;
   }
-  img {
+  .picture {
     width: 100px !important;
   }
 }
