--- a/_animation.scss
+++ b/_animation.scss
@@ -1,5 +1,6 @@
 @keyframes coins {
 0% {
+    transform: rotate(45deg);
     opacity : 0;
     top: 0%;
 }
@@ -17,6 +18,7 @@
     transform: rotate(360deg);
 }
 100% {
+    transform: rotate(45deg);
     opacity : 1;
     top: 95%;
 }
