--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Assistant:600&display=swap');
 @import 'animation.scss';
 @import 'variables.scss';
+* {
+  font-family: $fonts;
+}
 body {
   margin: 0 auto;
   box-sizing: border-box;
@@ -57,7 +61,8 @@ height: 80vh;
       box-shadow: 0px 4px 56px #c4c4c4;
       border-radius: 39px;
       h1 {
-        font-family: Open Sans;
+       font-family: $fonts;
+       font-weight: 400;
         font-style: normal;
         font-weight: bold;
         font-size: 2em;
