--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css?family=Assistant:600&display=swap");
 @-webkit-keyframes coins {
   0% {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
     opacity: 0;
     top: 0%;
   }
@@ -21,37 +24,46 @@
             transform: rotate(360deg);
   }
   100% {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    opacity: 1;
+    top: 95%;
+  }
+}
+@keyframes coins {
+  0% {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    opacity: 0;
+    top: 0%;
+  }
+  10% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+  30% {
+    opacity: 1;
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  50% {
+    -webkit-transform: rotate(240deg);
+            transform: rotate(240deg);
+  }
+  70% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+  100% {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
     opacity: 1;
     top: 95%;
   }
 }
 
-@keyframes coins {
-  0% {
-    opacity: 0;
-    top: 0%;
-  }
-  10% {
-    -webkit-transform: rotate(90deg);
-            transform: rotate(90deg);
-  }
-  30% {
-    opacity: 1;
-    -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
-  }
-  50% {
-    -webkit-transform: rotate(240deg);
-            transform: rotate(240deg);
-  }
-  70% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-  100% {
-    opacity: 1;
-    top: 95%;
-  }
+* {
+  font-family: "Assistant", sans-serif;
 }
 
 body {
@@ -134,7 +146,8 @@ section {
 }
 
 .start-container .col .welcome h1 {
-  font-family: Open Sans;
+  font-family: "Assistant", sans-serif;
+  font-weight: 400;
   font-style: normal;
   font-weight: bold;
   font-size: 2em;
