--- a/_animation.scss
+++ b/_animation.scss
@@ -14,12 +14,12 @@
 50% {
     transform: rotate(240deg);
 }
-70% {
+80% {opacity: 1;
     transform: rotate(360deg);
 }
 100% {
     transform: rotate(45deg);
-    opacity : 1;
-    top: 95%;
+    opacity : 0;
+    top: 90%;
 }
 }
