--- a/_variables.scss
+++ b/_variables.scss
@@ -1,17 +1,46 @@
 $fonts : 'Assistant', sans-serif; 
 
+:root { //root pseudo class a lightmode-hoz
+  --footer-header-bg: #70a300;
+  --heading-color: white;
+  --main-color: black;
+  --section-bg: #E7EAEE;
+  --column-bg:white;
+  --shadow-color:#c4c4c4;
+  --get-started-bg: #639100;
+  --get-started-color: white;
+--get-started-hover-bg:lightgreen;
+--get-started-hover-color: black;
+--color:black;
+
+}
+//darktheme pseudo class colors
+[data-theme="dark"] {
+  --footer-header-bg: #232222;
+  --heading-color: #4486E8;
+  --main-color:white;
+  --section-bg: #686868;
+   --column-bg:#232222;
+  --shadow-color:black;
+  --get-started-bg: #4486E8;;
+  --get-started-color: #232222;
+--get-started-hover-bg:rgb(10, 56, 125);
+--color: #4486E8;
+}
+
 
 @mixin universal-container {
-   height: 100%;
+   height: 90%;
    margin: 0 auto;
    margin-top: 2em;
    align-items: center;
     width: 90%;
-    background: #f5f5f5;
+    background:var(--column-bg);
     box-sizing: border-box;
-    box-shadow: 0px 4px 56px #c4c4c4;
+    box-shadow: 0px 4px 56px var(--shadow-color);
     border-radius: 39px;
     @include grid;
+    color:var(--color);
 }
 @mixin grid {
     display: grid;
@@ -21,13 +50,14 @@ $fonts : 'Assistant', sans-serif;
 }
 @mixin wallet-container {
     position: relative;
-  height: 100%;
+  height: 90%;
    margin: 0 auto;
    margin-top: 2em;
     width: 90%;
-    background: #f5f5f5;
-    box-shadow: 0px 4px 56px #c4c4c4;
+    background: var(--column-bg);
+    box-shadow: 0px 4px 56px var(--shadow-color);
     border-radius: 39px;
+    color:var(--color);
 }
 @mixin input {
      display:block;
