--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Assistant:600&display=swap');
 @import 'animation.scss';
 @import 'variables.scss';
+
+
 * {
   font-family: $fonts;
 }
 body {
+  
   margin: 0 auto;
   box-sizing: border-box;
   height: 100%;
@@ -12,42 +15,92 @@ body {
 }
 /*Header with flexbox (for navbar)*/
 header {
-  padding: 0.5em;
-  color: white;
-  height: 5vh;
-  background: #70a300;
+  h1 {
+    padding: 1em;
+    font-size: 26px;
+  }
+  z-index: 1;
+  color: var(--heading-color);
+  position: absolute;
+  top:0;
+  height: 7%;
+  width:100%;
+  background: var(--footer-header-bg);
   display: flex;
   justify-content: space-between;
   align-items: center;
   nav {
+  
+  padding:0;
     margin: 0;
     .nav__links {
+       transition: all 1s ease 0s;
       list-style: none;
       li {
         display: inline-block;
-        padding: 1rem 20px;
+        padding: 20px;
         a {
           font-size: 20px;
-          color: white;
+          color: var(--heading-color);
           text-decoration: none;
 
           &:hover {
             transition: all 0.5s ease 0s;
-            color: black;
+            color: var(--main-color);
           }
         }
       }
     }
   }
+  .bars {
+    position: absolute;
+    right: 2%;
+    margin: 0 auto;
+    display: none;
+    cursor:pointer;
+    .bar1, .bar2, .bar3 {
+  width: 20px;
+  height: 3px;
+  background-color:var(--heading-color);
+  margin: 3px 0;
+  transition: 0.4s;
 }
+}
+.change .bar1 {
+  transform: rotate(-45deg) translate(-4px, 5px);
+}
+.change .bar2 {opacity: 0;}
+.change .bar3 {
+  transform: rotate(45deg) translate(-3px, -5px);
+}
+.theme-switch-wrapper {
+  position: absolute;
+  top: 25%;
+  left: 30vh;
+}
+}
+
 section {
-height: 80vh;
+  transition: all 0.5s ease 0s;
+  z-index: -1;
+  background-color: var(--section-bg);
+  top:7%;
+  position: absolute;
+  height: 85vh;
+  width:100%;
+  #coins {
+    position: absolute;
+    top:0;
+    width:100%;
+    height:100%;
+    z-index: -1;  
+  }
 
 }
 //Start Page container
 .start-container {
-   margin-top: 2em;
-  height: 85%;
+  padding-top: 2em;
+  height: 70%;
   display: grid;
   align-items: center;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -57,8 +110,8 @@ height: 80vh;
     .welcome {
       margin: 2em;
       padding: 3em;
-      background: #f5f5f5;
-      box-shadow: 0px 4px 56px #c4c4c4;
+      background: var(--column-bg);
+      box-shadow: 0px 4px 56px var(--shadow-color);
       border-radius: 39px;
       h1 {
        font-family: $fonts;
@@ -74,22 +127,10 @@ height: 80vh;
         order: 0;
         align-self: center;
         margin: 10px 0px;
-        color: #2a8a84;
+        color: var(--color);
       }
     }
-    .description {
-      margin: 1em;
-      padding: 1em;
-      font-family: Open Sans;
-      font-style: normal;
-      font-weight: 600;
-      font-size: 1em;
-      line-height: 1.5em;
-      display: flex;
-      align-items: center;
-
-      justify-content: center;
-    }
+   
     p {
       text-align: center;
       align-self: center;
@@ -111,10 +152,10 @@ height: 80vh;
    
     text-align: center;
     h1 {
-      font-size: 4vw;
+      font-size: 4vh;
     }
     h2 {
-      font-size: 2vw;
+      font-size: 3vh;
     }
   }
   .income {
@@ -147,7 +188,7 @@ table {
   label{
     display:block;
     padding:1vw;
-    font-size:80%;
+    font-size:2vh;
   }
   input, textarea{
    @include input;
@@ -180,6 +221,7 @@ table {
   
 }
 table {
+  color: var(--main-color);
   width: 100%;
   & tr {
 width: 100%;
@@ -188,8 +230,8 @@ width: 100%;
 
 
 .get-started {
-  z-index: 1;
-  background: #639100;
+  z-index: 2;
+  background: var(--get-started-bg);
   border: 0px;
   border-radius: 25px;
   font-family: Open Sans;
@@ -197,7 +239,7 @@ width: 100%;
   font-size: 1.5em;
   line-height: 49px;
   text-align: center;
-  color: #ffffff;
+  color: var(--get-started-color);
   cursor: pointer;
   display: block;
   margin: 0 auto;
@@ -205,8 +247,8 @@ width: 100%;
   width: 10em;
   transition: all 0.5s ease 0s;
   &:hover {
-    background-color: lightgreen;
-    color: black;
+    background-color: var(--get-started-hover-bg);
+    color: var(--main-color);
   }
 }
 //wallet page
@@ -221,6 +263,7 @@ width: 100%;
     text-align: center;
   }
   form {
+    padding:  0 0.5em;
     display:flex;
     justify-content: space-around;
     align-items: center;
@@ -231,7 +274,7 @@ width: 100%;
     }
     label {
       font-weight:900;
-      font-size: 16px;
+      font-size:3vh;
       margin: 2vw;
       text-align: center;
     }
@@ -242,18 +285,25 @@ width: 100%;
     padding: 1em;
     font-size: 2.2vw;
     width: 90%;
-    
+    color: var(--main-color);
   }
   
 }
 .history {
-height: 70%;
+height: 60%;
 overflow: auto;
 }
   
 footer {
-  background: #9dbc5a; 
-  height: 5vh;
+  color:var(--heading-color);
+  z-index: 1;
+  position: absolute;
+  height: 8%;
+  bottom: 0;
+  width:100%;
+  background: var(--footer-header-bg); 
+  display: flex;
+  justify-content: space-around;
 }
 
 
@@ -268,11 +318,33 @@ footer {
   .welcome {
     padding: 1em !important;
   }
-  .description {
-    display: none !important;
-  }
   .picture {
     width: 100px !important;
   }
+  nav {
+
+.responsive{
+ transition: all 1s ease 0s;
+  background-color:var(--footer-header-bg);
+  position: absolute;
+  top:15%;
+  right: 0%;
+       display:inline-block !important;
+       li{
+         display: block !important;
+       }
+      }    
+     ul {
+      
+       li {
+         display: none !important;
+       }
+     }
+     
+     
+  }
+  .bars {
+           display: inline-block !important;
+         }
 }
 
