--- a/style/style.css
+++ b/style/style.css
@@ -19,15 +19,16 @@
     -webkit-transform: rotate(240deg);
             transform: rotate(240deg);
   }
-  70% {
+  80% {
+    opacity: 1;
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
   100% {
     -webkit-transform: rotate(45deg);
             transform: rotate(45deg);
-    opacity: 1;
-    top: 95%;
+    opacity: 0;
+    top: 90%;
   }
 }
 @keyframes coins {
@@ -50,16 +51,44 @@
     -webkit-transform: rotate(240deg);
             transform: rotate(240deg);
   }
-  70% {
+  80% {
+    opacity: 1;
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
   100% {
     -webkit-transform: rotate(45deg);
             transform: rotate(45deg);
-    opacity: 1;
-    top: 95%;
+    opacity: 0;
+    top: 90%;
   }
+}
+
+:root {
+  --footer-header-bg: #70a300;
+  --heading-color: white;
+  --main-color: black;
+  --section-bg: #E7EAEE;
+  --column-bg:white;
+  --shadow-color:#c4c4c4;
+  --get-started-bg: #639100;
+  --get-started-color: white;
+  --get-started-hover-bg:lightgreen;
+  --get-started-hover-color: black;
+  --color:black;
+}
+
+[data-theme="dark"] {
+  --footer-header-bg: #232222;
+  --heading-color: #4486E8;
+  --main-color:white;
+  --section-bg: #686868;
+  --column-bg:#232222;
+  --shadow-color:black;
+  --get-started-bg: #4486E8;
+  --get-started-color: #232222;
+  --get-started-hover-bg:rgb(10, 56, 125);
+  --color: #4486E8;
 }
 
 * {
@@ -76,10 +105,13 @@ body {
 
 /*Header with flexbox (for navbar)*/
 header {
-  padding: 0.5em;
-  color: white;
-  height: 5vh;
-  background: #70a300;
+  z-index: 1;
+  color: var(--heading-color);
+  position: absolute;
+  top: 0;
+  height: 7%;
+  width: 100%;
+  background: var(--footer-header-bg);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -91,38 +123,98 @@ header {
           align-items: center;
 }
 
+header h1 {
+  padding: 1em;
+  font-size: 26px;
+}
+
 header nav {
+  padding: 0;
   margin: 0;
 }
 
 header nav .nav__links {
+  -webkit-transition: all 1s ease 0s;
+  transition: all 1s ease 0s;
   list-style: none;
 }
 
 header nav .nav__links li {
   display: inline-block;
-  padding: 1rem 20px;
+  padding: 20px;
 }
 
 header nav .nav__links li a {
   font-size: 20px;
-  color: white;
+  color: var(--heading-color);
   text-decoration: none;
 }
 
 header nav .nav__links li a:hover {
   -webkit-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
-  color: black;
+  color: var(--main-color);
+}
+
+header .bars {
+  position: absolute;
+  right: 2%;
+  margin: 0 auto;
+  display: none;
+  cursor: pointer;
+}
+
+header .bars .bar1, header .bars .bar2, header .bars .bar3 {
+  width: 20px;
+  height: 3px;
+  background-color: var(--heading-color);
+  margin: 3px 0;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+header .change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-4px, 5px);
+          transform: rotate(-45deg) translate(-4px, 5px);
+}
+
+header .change .bar2 {
+  opacity: 0;
+}
+
+header .change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-3px, -5px);
+          transform: rotate(45deg) translate(-3px, -5px);
+}
+
+header .theme-switch-wrapper {
+  position: absolute;
+  top: 25%;
+  left: 30vh;
 }
 
 section {
-  height: 80vh;
+  -webkit-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+  z-index: -1;
+  background-color: var(--section-bg);
+  top: 7%;
+  position: absolute;
+  height: 85vh;
+  width: 100%;
+}
+
+section #coins {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 .start-container {
-  margin-top: 2em;
-  height: 85%;
+  padding-top: 2em;
+  height: 70%;
   display: -ms-grid;
   display: grid;
   -webkit-box-align: center;
@@ -139,9 +231,9 @@ section {
 .start-container .col .welcome {
   margin: 2em;
   padding: 3em;
-  background: #f5f5f5;
-  -webkit-box-shadow: 0px 4px 56px #c4c4c4;
-          box-shadow: 0px 4px 56px #c4c4c4;
+  background: var(--column-bg);
+  -webkit-box-shadow: 0px 4px 56px var(--shadow-color);
+          box-shadow: 0px 4px 56px var(--shadow-color);
   border-radius: 39px;
 }
 
@@ -168,26 +260,7 @@ section {
   -ms-flex-item-align: center;
       align-self: center;
   margin: 10px 0px;
-  color: #2a8a84;
-}
-
-.start-container .col .description {
-  margin: 1em;
-  padding: 1em;
-  font-family: Open Sans;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1em;
-  line-height: 1.5em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  color: var(--color);
 }
 
 .start-container .col p {
@@ -207,18 +280,18 @@ section {
 }
 
 .universal-container {
-  height: 100%;
+  height: 90%;
   margin: 0 auto;
   margin-top: 2em;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   width: 90%;
-  background: #f5f5f5;
+  background: var(--column-bg);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  -webkit-box-shadow: 0px 4px 56px #c4c4c4;
-          box-shadow: 0px 4px 56px #c4c4c4;
+  -webkit-box-shadow: 0px 4px 56px var(--shadow-color);
+          box-shadow: 0px 4px 56px var(--shadow-color);
   border-radius: 39px;
   display: -ms-grid;
   display: grid;
@@ -227,6 +300,7 @@ section {
   -ms-grid-rows: 1fr;
       grid-template-rows: 1fr;
       grid-template-areas: "income finance finance outcome";
+  color: var(--color);
   -webkit-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
 }
@@ -236,11 +310,11 @@ section {
 }
 
 .income h1, .outcome h1, .finance h1 {
-  font-size: 4vw;
+  font-size: 4vh;
 }
 
 .income h2, .outcome h2, .finance h2 {
-  font-size: 2vw;
+  font-size: 3vh;
 }
 
 .income {
@@ -286,7 +360,7 @@ section {
 .submission-form label {
   display: block;
   padding: 1vw;
-  font-size: 80%;
+  font-size: 2vh;
 }
 
 .submission-form input, .submission-form textarea {
@@ -329,6 +403,7 @@ section {
 }
 
 table {
+  color: var(--main-color);
   width: 100%;
 }
 
@@ -337,8 +412,8 @@ table tr {
 }
 
 .get-started {
-  z-index: 1;
-  background: #639100;
+  z-index: 2;
+  background: var(--get-started-bg);
   border: 0px;
   border-radius: 25px;
   font-family: Open Sans;
@@ -346,7 +421,7 @@ table tr {
   font-size: 1.5em;
   line-height: 49px;
   text-align: center;
-  color: #ffffff;
+  color: var(--get-started-color);
   cursor: pointer;
   display: block;
   margin: 0 auto;
@@ -357,22 +432,23 @@ table tr {
 }
 
 .get-started:hover {
-  background-color: lightgreen;
-  color: black;
+  background-color: var(--get-started-hover-bg);
+  color: var(--main-color);
 }
 
 .wallet-container {
   height: 100vh;
   /* or position:absolute; height:100%; */
   position: relative;
-  height: 100%;
+  height: 90%;
   margin: 0 auto;
   margin-top: 2em;
   width: 90%;
-  background: #f5f5f5;
-  -webkit-box-shadow: 0px 4px 56px #c4c4c4;
-          box-shadow: 0px 4px 56px #c4c4c4;
+  background: var(--column-bg);
+  -webkit-box-shadow: 0px 4px 56px var(--shadow-color);
+          box-shadow: 0px 4px 56px var(--shadow-color);
   border-radius: 39px;
+  color: var(--color);
   -webkit-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
 }
@@ -384,6 +460,7 @@ table tr {
 }
 
 .wallet-container form {
+  padding: 0 0.5em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -405,7 +482,7 @@ table tr {
 
 .wallet-container form label {
   font-weight: 900;
-  font-size: 16px;
+  font-size: 3vh;
   margin: 2vw;
   text-align: center;
 }
@@ -416,16 +493,27 @@ table tr {
   padding: 1em;
   font-size: 2.2vw;
   width: 90%;
+  color: var(--main-color);
 }
 
 .history {
-  height: 70%;
+  height: 60%;
   overflow: auto;
 }
 
 footer {
-  background: #9dbc5a;
-  height: 5vh;
+  color: var(--heading-color);
+  z-index: 1;
+  position: absolute;
+  height: 8%;
+  bottom: 0;
+  width: 100%;
+  background: var(--footer-header-bg);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 @media (max-width: 750px) {
@@ -440,11 +528,26 @@ footer {
   .welcome {
     padding: 1em !important;
   }
-  .description {
-    display: none !important;
-  }
   .picture {
     width: 100px !important;
+  }
+  nav .responsive {
+    -webkit-transition: all 1s ease 0s;
+    transition: all 1s ease 0s;
+    background-color: var(--footer-header-bg);
+    position: absolute;
+    top: 15%;
+    right: 0%;
+    display: inline-block !important;
+  }
+  nav .responsive li {
+    display: block !important;
+  }
+  nav ul li {
+    display: none !important;
+  }
+  .bars {
+    display: inline-block !important;
   }
 }
 /*# sourceMappingURL=style.css.map */
