--- a/_variables.scss
+++ b/_variables.scss
@@ -12,20 +12,24 @@ $fonts : 'Assistant', sans-serif;
 --get-started-hover-bg:lightgreen;
 --get-started-hover-color: black;
 --color:black;
+--hue:hue-rotate(0deg);
+--input-bg:white;
 
 }
 //darktheme pseudo class colors
 [data-theme="dark"] {
   --footer-header-bg: #232222;
-  --heading-color: #4486E8;
+  --heading-color: rgb(108, 159, 237);
   --main-color:white;
-  --section-bg: #686868;
-   --column-bg:#232222;
+  --section-bg: #000000;
+   --column-bg:#2b2b2b;
   --shadow-color:black;
-  --get-started-bg: #4486E8;;
+  --get-started-bg: rgb(97, 148, 225);;
   --get-started-color: #232222;
 --get-started-hover-bg:rgb(10, 56, 125);
---color: #4486E8;
+--color: rgb(117, 163, 232);
+--hue: hue-rotate(130deg);
+--input-bg:black;
 }
 
 
@@ -61,7 +65,9 @@ $fonts : 'Assistant', sans-serif;
 }
 @mixin input {
      display:block;
-    border:2px solid rgb(32, 108, 28);
+    border:2px solid var(--get-started-bg);
     font-size:14px;
-    border-radius:5px;
+    background: var(--input-bg);
+    color: var(--main-color);
+    width: 100%;
 }
