--- a/style/style.css
+++ b/style/style.css
@@ -76,19 +76,23 @@
   --get-started-hover-bg:lightgreen;
   --get-started-hover-color: black;
   --color:black;
+  --hue:hue-rotate(0deg);
+  --input-bg:white;
 }
 
 [data-theme="dark"] {
   --footer-header-bg: #232222;
-  --heading-color: #4486E8;
+  --heading-color: rgb(108, 159, 237);
   --main-color:white;
-  --section-bg: #686868;
-  --column-bg:#232222;
+  --section-bg: #000000;
+  --column-bg:#2b2b2b;
   --shadow-color:black;
-  --get-started-bg: #4486E8;
+  --get-started-bg: rgb(97, 148, 225);
   --get-started-color: #232222;
   --get-started-hover-bg:rgb(10, 56, 125);
-  --color: #4486E8;
+  --color: rgb(117, 163, 232);
+  --hue: hue-rotate(130deg);
+  --input-bg:black;
 }
 
 * {
@@ -190,7 +194,40 @@ header .change .bar3 {
 header .theme-switch-wrapper {
   position: absolute;
   top: 25%;
-  left: 30vh;
+  left: 35vh;
+}
+
+header .theme-switch-wrapper input[type="checkbox"] {
+  width: 40px;
+  height: 20px;
+  background: var(--get-started-hover-bg);
+  border-radius: 20px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  -webkit-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+header .theme-switch-wrapper input[type="checkbox"]:before {
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  left: 9%;
+  top: 10%;
+  background-color: white;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  -webkit-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+header .theme-switch-wrapper input:checked[type="checkbox"]:before {
+  left: 50%;
 }
 
 section {
@@ -277,6 +314,8 @@ section #coins {
   display: block;
   margin: auto;
   width: 30vw;
+  -webkit-filter: var(--hue);
+          filter: var(--hue);
 }
 
 .universal-container {
@@ -343,18 +382,18 @@ section #coins {
 
 .submission-form {
   text-align: center;
-  max-width: 20vw;
   padding: 1vw;
   margin: 0 auto;
-  border-radius: 5px;
+  max-width: 30vw;
 }
 
-.submission-form select, .submission-form select option {
+.submission-form select, .submission-form option {
+  background: var(--input-bg);
   display: block;
-  padding: 1vw;
-  border: 2px solid #206c1c;
+  border: 2px solid var(--get-started-bg);
   font-size: 0.8em;
-  width: 100%;
+  width: 103%;
+  color: var(--main-color);
 }
 
 .submission-form label {
@@ -363,11 +402,12 @@ section #coins {
   font-size: 2vh;
 }
 
-.submission-form input, .submission-form textarea {
+.submission-form input {
   display: block;
-  border: 2px solid #206c1c;
+  border: 2px solid var(--get-started-bg);
   font-size: 14px;
-  border-radius: 5px;
+  background: var(--input-bg);
+  color: var(--main-color);
   width: 100%;
 }
 
@@ -382,7 +422,7 @@ section #coins {
   font-size: 1em;
   text-transform: uppercase;
   font-weight: 700;
-  color: white;
+  color: var(--main-color);
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   -webkit-transition: all 0.5s ease 0s;
@@ -474,9 +514,11 @@ table tr {
 .wallet-container form input {
   margin: 2vw;
   display: block;
-  border: 2px solid #206c1c;
+  border: 2px solid var(--get-started-bg);
   font-size: 14px;
-  border-radius: 5px;
+  background: var(--input-bg);
+  color: var(--main-color);
+  width: 100%;
   width: 70%;
 }
 
