--- a/style/style.css
+++ b/style/style.css
@@ -100,6 +100,7 @@
 }
 
 body {
+  background-color: var(--section-bg);
   margin: 0 auto;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -138,8 +139,8 @@ header nav {
 }
 
 header nav .nav__links {
-  -webkit-transition: all 1s ease 0s;
-  transition: all 1s ease 0s;
+  -webkit-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
   list-style: none;
 }
 
@@ -231,8 +232,6 @@ header .theme-switch-wrapper input:checked[type="checkbox"]:before {
 }
 
 section {
-  -webkit-transition: all 0.5s ease 0s;
-  transition: all 0.5s ease 0s;
   z-index: -1;
   background-color: var(--section-bg);
   top: 7%;
@@ -574,8 +573,8 @@ footer {
     width: 100px !important;
   }
   nav .responsive {
-    -webkit-transition: all 1s ease 0s;
-    transition: all 1s ease 0s;
+    -webkit-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
     background-color: var(--footer-header-bg);
     position: absolute;
     top: 15%;
