--- a/style/style.scss
+++ b/style/style.scss
@@ -78,7 +78,7 @@ header {
   .theme-switch-wrapper {
     position: absolute;
     top: 25%;
-    left: 35vh;
+    left: 250px;
     input[type='checkbox'] {
       width: 40px;
       height: 20px;
