--- a/style/style.css
+++ b/style/style.css
@@ -197,7 +197,7 @@ header .change .bar3 {
 header .theme-switch-wrapper {
   position: absolute;
   top: 25%;
-  left: 250px;
+  left: 200px;
 }
 
 header .theme-switch-wrapper input[type='checkbox'] {
@@ -248,6 +248,86 @@ section #coins {
   width: 100%;
   height: 100%;
   z-index: -1;
+}
+
+section #coins img:nth-child(1) {
+  left: 100px;
+  position: absolute;
+  width: 31px;
+  -webkit-animation: coins 0.5 s linear infinite;
+          animation: coins 0.5 s linear infinite;
+}
+
+section #coins img:nth-child(2) {
+  left: 200px;
+  position: absolute;
+  width: 52px;
+  -webkit-animation: coins 0.5 s linear infinite;
+          animation: coins 0.5 s linear infinite;
+}
+
+section #coins img:nth-child(3) {
+  left: 300px;
+  position: absolute;
+  width: 29px;
+  -webkit-animation: coins 0.5 s linear infinite;
+          animation: coins 0.5 s linear infinite;
+}
+
+section #coins img:nth-child(4) {
+  left: 400px;
+  position: absolute;
+  width: 56px;
+  -webkit-animation: coins 0.5 s linear infinite;
+          animation: coins 0.5 s linear infinite;
+}
+
+section #coins img:nth-child(5) {
+  left: 500px;
+  position: absolute;
+  width: 74px;
+  -webkit-animation: coins 0.5 s linear infinite;
+          animation: coins 0.5 s linear infinite;
+}
+
+section #coins img:nth-child(6) {
+  left: 600px;
+  position: absolute;
+  width: 26px;
+  -webkit-animation: coins 0.5 s linear infinite;
+          animation: coins 0.5 s linear infinite;
+}
+
+section #coins img:nth-child(7) {
+  left: 700px;
+  position: absolute;
+  width: 66px;
+  -webkit-animation: coins 0.5 s linear infinite;
+          animation: coins 0.5 s linear infinite;
+}
+
+section #coins img:nth-child(8) {
+  left: 800px;
+  position: absolute;
+  width: 50px;
+  -webkit-animation: coins 0.5 s linear infinite;
+          animation: coins 0.5 s linear infinite;
+}
+
+section #coins img:nth-child(9) {
+  left: 900px;
+  position: absolute;
+  width: 55px;
+  -webkit-animation: coins 0.5 s linear infinite;
+          animation: coins 0.5 s linear infinite;
+}
+
+section #coins img:nth-child(10) {
+  left: 1000px;
+  position: absolute;
+  width: 32px;
+  -webkit-animation: coins 0.5 s linear infinite;
+          animation: coins 0.5 s linear infinite;
 }
 
 .start-container {
@@ -562,7 +642,7 @@ footer {
 }
 
 @media (max-width: 750px) {
-  .universal-container {
+  .actions-container {
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
         grid-template-areas: 'income outcome' !important;
@@ -577,6 +657,7 @@ footer {
     width: 100px !important;
   }
   nav .responsive {
+    z-index: -1;
     -webkit-transition: all 0.5s ease 0s;
     transition: all 0.5s ease 0s;
     background-color: var(--footer-header-bg);
